Page Layout: Fix repeater collapsed fields

--- a/src/scss/fields/_button-group.scss
+++ b/src/scss/fields/_button-group.scss
@@ -5,8 +5,7 @@
 		flex-wrap:wrap;
 		label {
 			.postbox-container & {
-				//max-width:20%;
-				//flex:0;
+				flex:0 0 0;
 			}
 		}
 	}
